--- a/portal/html/USR-1251-F-DTL.html
+++ b/portal/html/USR-1251-F-DTL.html
@@ -331,33 +331,86 @@
                     <span>메뉴에 대한 설명을 상세하게 작성합니다. 메뉴에 대한 설명을 상세하게 작성합니다.</span>
                 </div>
 
-                <div class="content_list_box">
+                <div class="content_list_box type_02">
                     <div class="list_item">
-                        <div class="tit_box">
-                            <h4><span></span>신청안내</h4>
-                        </div>
                         <dl>
-                            <dt>VC 경력 확인은 VC근무경력과 VC Track Record로 나누어서 확인하실 수 있습니다.</dt>
+                            <dt>송은희 님의 회원정보로 확인 된 근무경력은 아래와 같습니다.</dt>
                             <dd>
                                 <ul>
-                                    <li>본인인증을 통해 회원가입한 사용자를 대상으로 하는 서비스입니다.</li>
-                                    <li>근무경력과 Track Record 확인은 VC 전자보고 시스템에 입력된 내용을 근거로 확인된 사항입니다.</li>
-                                    <li>잘못된 투자이력은 근무중 또는 근무했던 VC에 정보수정을 요청, 수정 완료 후에 다시 신청하시길 바랍니다.</li>
-                                    <li>개인정보에 대한 확인은 VC 전자보고 시스템 VICS_R 인력정보관리 [1303] 을 참고하여 주시길 바랍니다.</li>
+                                    <li>실제와 상이한 경력은 근무중 또는 근무했던 VC에 정보수정을 요청, 수정 완료 후에 다시 신청하시길 바랍니다.</li>
+                                    <li>VC 근무경력 확인서는 협회 담당자의 승인 후에 출력이 가능합니다.</li>
                                 </ul>
                             </dd>
                         </dl>
                     </div>
-                
-                    <div class="btn_box_group type_01 left">
+
+                    <div class="tbl_box">
+                        <table>
+                            <caption>VC 근무경력 확인</caption>
+                            <colgroup>
+                                <col width="25%">
+                                <col width="25%">
+                                <col width="25%">
+                                <col width="25%">
+                            </colgroup>
+                            <thead>
+                                <tr>
+                                    <th scope="col">VC 명</th>
+                                    <th scope="col">직급</th>
+                                    <th scope="col">근무기간</th>
+                                    <th scope="col">경력</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>ㅇㅇ인베스먼트</td>
+                                    <td>팀장</td>
+                                    <td>2022-10-22 ~ 2022-10-22</td>
+                                    <td>3개월</td>
+                                </tr>
+                                <tr>
+                                    <td>ㅇㅇ인베스먼트</td>
+                                    <td>팀장</td>
+                                    <td>2022-10-22 ~ 2022-10-22</td>
+                                    <td>3개월</td>
+                                </tr>
+                                <tr>
+                                    <td>ㅇㅇ인베스먼트</td>
+                                    <td>팀장</td>
+                                    <td>2022-10-22 ~ 2022-10-22</td>
+                                    <td>3개월</td>
+                                </tr>
+                                <tr>
+                                    <td>ㅇㅇ인베스먼트</td>
+                                    <td>팀장</td>
+                                    <td>2022-10-22 ~ 2022-10-22</td>
+                                    <td>3개월</td>
+                                </tr>
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td>총 경력기간 3년 4개월</td>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+
+                    <div class="chk_box">
+                        <span>
+                            <input type="checkbox" id="chk_01">
+                            <label for="chk_01">위 사항은 사실과 다름이 없음을 확인합니다.</label>
+                        </span>
+                    </div>
+
+                    <div class="btn_box_group type_01 right">
                         <div class="btn_box">
-                            <a href="" class="btn_navy dialog-link" data-target="#alpop_01">VC 근무경력 확인하기 >></a>
+                            <a href="" class="btn_gray">취소</a>
                         </div>
                         <div class="btn_box">
-                            <a href="" class="btn_blue dialog-link" data-target="#alpop_02">VC Track Record 확인하기 >></a>
-                        </div>
-                        <div class="btn_box">
-                            <a href="" class="btn_skyblue dialog-link" data-target="#alpop_03">신청정보 확인 >></a>
+                            <a href="" class="btn_navy">VC Track Record 확인 신청 >></a>
                         </div>
                     </div>
                 </div>
