--- a/portal/html/pub_guide.html
+++ b/portal/html/pub_guide.html
@@ -657,6 +657,192 @@
                         </tbody>
                     </table>
                 </div>
+
+                <br/>
+                <div class="tbl_box">
+                    <table>
+                        <caption>재무정보</caption>
+                        <colgroup>
+                            <col width="8%">
+                            <col width="20%">
+                            <col width="72%">
+                        </colgroup>
+                        <thead>
+                            <tr>
+                                <th scope="col">
+                                    <div class="chk_box solo">
+                                        <span>
+                                            <input type="checkbox" id="chk_01" class="chk_all" name="chk_all">
+                                            <label for="chk_01"></label>
+                                        </span>
+                                    </div>
+                                </th>
+                                <th scope="col">회사명</th>
+                                <th scope="col">근무기간</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- 한묶음 -->
+                            <tr>
+                                <td rowspan="2">
+                                    <div class="chk_box solo all_group">
+                                        <span>
+                                            <input type="checkbox" id="chk_02" name="chk_all">
+                                            <label for="chk_02"></label>
+                                        </span>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="inp_box">
+                                        <input type="text" id="input_02">
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="period_group">
+                                        <div class="inp_group period">
+                                            <div class="inp_box datepicker_box">
+                                                <input type="text" id="input_03" class="datepicker_start hasDatepicker"><img class="ui-datepicker-trigger" src="../images/ico/ico_datepicker_img.png" alt="날짜선택" title="날짜선택">
+                                            </div>
+                                            <span>~</span>
+                                            <div class="inp_box datepicker_box">
+                                                <input type="text" id="input_04" class="datepicker_end hasDatepicker"><img class="ui-datepicker-trigger" src="../images/ico/ico_datepicker_img.png" alt="날짜선택" title="날짜선택">
+                                            </div>
+                                        </div>
+                                        <div class="chk_box">
+                                            <span>
+                                                <input type="checkbox" id="chk_001">
+                                                <label for="chk_001">재직중</label>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">
+                                    <div class="inp_group inp_num">
+                                        <div class="inp_box">
+                                            <input type="text" id="input_05">
+                                        </div>
+                                        <span class="count">
+                                            <span class="num">0</span>
+                                            <span class="total">/ 256</span>
+                                        </span>
+                                    </div>
+                                </td>
+                            </tr>
+                            <!-- 한묶음 -->
+                            <tr>
+                                <td rowspan="2">
+                                    <div class="chk_box solo all_group">
+                                        <span>
+                                            <input type="checkbox" id="chk_03" name="chk_all">
+                                            <label for="chk_03"></label>
+                                        </span>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="inp_box">
+                                        <input type="text" id="input_06">
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="period_group">
+                                        <div class="inp_group period">
+                                            <div class="inp_box datepicker_box">
+                                                <input type="text" id="input_07" class="datepicker_start hasDatepicker"><img class="ui-datepicker-trigger" src="../images/ico/ico_datepicker_img.png" alt="날짜선택" title="날짜선택">
+                                            </div>
+                                            <span>~</span>
+                                            <div class="inp_box datepicker_box">
+                                                <input type="text" id="input_08" class="datepicker_end hasDatepicker"><img class="ui-datepicker-trigger" src="../images/ico/ico_datepicker_img.png" alt="날짜선택" title="날짜선택">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">
+                                    <div class="inp_group inp_num">
+                                        <div class="inp_box">
+                                            <input type="text" id="input_09">
+                                        </div>
+                                        <span class="count">
+                                            <span class="num">0</span>
+                                            <span class="total">/ 256</span>
+                                        </span>
+                                    </div>
+                                </td>
+                            </tr>
+                            <!-- 한묶음 -->
+                            <tr>
+                                <td rowspan="2">
+                                    <div class="chk_box solo all_group">
+                                        <span>
+                                            <input type="checkbox" id="chk_04" name="chk_all">
+                                            <label for="chk_04"></label>
+                                        </span>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="inp_box">
+                                        <input type="text" id="input_02">
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="period_group">
+                                        <div class="inp_group period">
+                                            <div class="inp_box datepicker_box">
+                                                <input type="text" id="input_10" class="datepicker_start hasDatepicker"><img class="ui-datepicker-trigger" src="../images/ico/ico_datepicker_img.png" alt="날짜선택" title="날짜선택">
+                                            </div>
+                                            <span>~</span>
+                                            <div class="inp_box datepicker_box">
+                                                <input type="text" id="input_11" class="datepicker_end hasDatepicker"><img class="ui-datepicker-trigger" src="../images/ico/ico_datepicker_img.png" alt="날짜선택" title="날짜선택">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">
+                                    <div class="inp_group inp_num">
+                                        <div class="inp_box">
+                                            <input type="text" id="input_12">
+                                        </div>
+                                        <span class="count">
+                                            <span class="num">0</span>
+                                            <span class="total">/ 256</span>
+                                        </span>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <br/>
+                <div class="tbl_box">
+                    <table>
+                        <caption>재무정보</caption>
+                        <colgroup>
+                            <col width="8%">
+                            <col width="20%">
+                            <col width="72%">
+                        </colgroup>
+                        <thead>
+                            <tr>
+                                <th scope="col">제목</th>
+                                <th scope="col">회사명</th>
+                                <th scope="col">근무기간</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>내용</td>
+                                <td>내용</td>
+                                <td>내용</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </dd>
         </dl>
 
@@ -1063,6 +1249,49 @@
             </dd>
         </dl>
         
+        <dl id="content_12" class="item-box">
+            <dt>리스트</dt>
+            <dd>
+                1. 리스트
+                <div class="content_list_box">
+                    <div class="list_item">
+                        <div class="tit_box">
+                            <h4><span></span>신청안내</h4>
+                        </div>
+                        <dl>
+                            <dt>VC 경력 확인은 VC근무경력과 VC Track Record로 나누어서 확인하실 수 있습니다.</dt>
+                            <dd>
+                                <ul>
+                                    <li>본인인증을 통해 회원가입한 사용자를 대상으로 하는 서비스입니다.</li>
+                                    <li>근무경력과 Track Record 확인은 VC 전자보고 시스템에 입력된 내용을 근거로 확인된 사항입니다.</li>
+                                    <li>잘못된 투자이력은 근무중 또는 근무했던 VC에 정보수정을 요청, 수정 완료 후에 다시 신청하시길 바랍니다.</li>
+                                    <li>개인정보에 대한 확인은 VC 전자보고 시스템 VICS_R 인력정보관리 [1303] 을 참고하여 주시길 바랍니다.</li>
+                                </ul>
+                            </dd>
+                        </dl>
+                    </div>
+                </div>
+                2. 리스트 박스bg
+                <div class="content_list_box type_02">
+                    <div class="list_item">
+                        <div class="tit_box">
+                            <h4><span></span>신청안내</h4>
+                        </div>
+                        <dl>
+                            <dt>VC 경력 확인은 VC근무경력과 VC Track Record로 나누어서 확인하실 수 있습니다.</dt>
+                            <dd>
+                                <ul>
+                                    <li>본인인증을 통해 회원가입한 사용자를 대상으로 하는 서비스입니다.</li>
+                                    <li>근무경력과 Track Record 확인은 VC 전자보고 시스템에 입력된 내용을 근거로 확인된 사항입니다.</li>
+                                    <li>잘못된 투자이력은 근무중 또는 근무했던 VC에 정보수정을 요청, 수정 완료 후에 다시 신청하시길 바랍니다.</li>
+                                    <li>개인정보에 대한 확인은 VC 전자보고 시스템 VICS_R 인력정보관리 [1303] 을 참고하여 주시길 바랍니다.</li>
+                                </ul>
+                            </dd>
+                        </dl>
+                    </div>
+                </div>
+            </dd>
+        </dl>
 
     </div>
 
