--- a/pub_list.html
+++ b/pub_list.html
@@ -365,9 +365,9 @@
                     division: '',
                     depth1:'맞춤투자 가이드',
                     path:'./portal/html/USR-02-02-F-LIST.html',
-                    date:'',
+                    date:'2022-09-05',
                     mdate:'2022-09-05',
-                    con:'작업중',
+                    con:'완료',
                     etc:'서치박스 셀렉트 추가'
                 },
                 {
@@ -583,36 +583,36 @@
                     division: '',
                     depth1:'업무처리지원 - VC 경력 확인',
                     path:'./portal/html/USR-12511-H-CONTN.html',
-                    date:'',
+                    date:'2022-09-15',
                     mdate:'2022-11-09',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[2차디자인]'
                 },
                 {
                     division: '',
                     depth1:'업무처리지원 - VC 근무 경력 확인',
                     path:'./portal/html/USR-1251-F-DTL.html',
-                    date:'',
+                    date:'2022-09-15',
                     mdate:'2022-10-18',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'업무처리지원 - VC Track Record',
                     path:'./portal/html/USR-12512-F-DTL.html',
-                    date:'',
+                    date:'2022-09-15',
                     mdate:'2022-10-24',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[2차디자인]'
                 },
                 {
                     division: '',
                     depth1:'업무처리지원 - 신청이력 확인',
                     path:'./portal/html/USR-1252-F-LIST.html',
-                    date:'',
+                    date:'2022-09-15',
                     mdate:'2022-10-31',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
 
@@ -973,10 +973,10 @@
                 {
                     division: '',
                     depth1:'마이페이지 - 벤처투자상담',
-                    path:'./portal/html/.html',
+                    path:'./portal/html/USR-1162-B-LIST.html',
                     date:'',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:'-> 바로가기 USR-1162-B-LIST'
                 },
                 {
@@ -991,19 +991,19 @@
                 {
                     division: '',
                     depth1:'마이페이지 - 이력서 관리',
-                    path:'./portal/html/.html',
+                    path:'./portal/html/USR-1242-F-FORM.html',
                     date:'',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:'-> 바로가기 USR-1242-F-FORM '
                 },
                 {
                     division: '',
                     depth1:'마이페이지 - 기업정보 관리',
-                    path:'./portal/html/.html',
+                    path:'./portal/html/USR-1010-F-FORM.html',
                     date:'',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:'-> 바로가기 USR-1010-F-FORM '
                 },
                 {
@@ -1018,10 +1018,10 @@
                 {
                     division: '',
                     depth1:'마이페이지 - VC 경력 확인',
-                    path:'./portal/html/.html',
+                    path:'./portal/html/USR-1252-F-LIST.html',
                     date:'',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:'-> 바로가기 USR-1252-F-LIST'
                 },
 
@@ -1055,7 +1055,7 @@
                     date:'',
                     mdate:'2022-12-01',
                     con:'작업중',
-                    etc:'[2차디자인]'
+                    etc:'<span class="red">컨텐츠 확인필요</span> [2차디자인]'
                 },
                 {
                     division: '',
@@ -1064,7 +1064,7 @@
                     date:'',
                     mdate:'2022-12-01',
                     con:'작업중',
-                    etc:'[2차디자인]'
+                    etc:'<span class="red">컨텐츠 확인필요</span> [2차디자인]'
                 },
                 {
                     division: '',
@@ -1073,7 +1073,7 @@
                     date:'',
                     mdate:'2022-12-02',
                     con:'작업중',
-                    etc:'[2차디자인]'
+                    etc:'<span class="red">컨텐츠 확인필요</span> [2차디자인]'
                 },
                 {
                     division: '',
@@ -1082,7 +1082,7 @@
                     date:'',
                     mdate:'2022-12-02',
                     con:'작업중',
-                    etc:'[2차디자인]'
+                    etc:'<span class="red">컨텐츠 확인필요</span> [2차디자인]'
                 },
             ];
         
